gcc/testsuite/rust/compile/import_in_type_ns2.rs
#![feature(no_core)]
#![no_core]

pub mod foo {} // { dg-error ".foo. defined multiple times" }

use foo;
